src/parser/EZGameParser.java
// Generated from /Users/alexanderjacobson/Dropbox/UBC/yr 4/CPSC 410/Group1Project1/src/parser/EZGameParser.g4 by ANTLR 4.13.2
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class EZGameParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ARENA_START=1, ENTITIES_START=2, BEHAVIOUR_START=3, END_CRITERIA_START=4, 
		ADD=5, SUB=6, MUL=7, DIV=8, UNLESS=9, OR=10, AND=11, NOT=12, LESS_THAN=13, 
		GREATER_THAN=14, LEQ=15, GEQ=16, EQUALS=17, PLAYER_TYPE=18, ENEMY_TYPE=19, 
		OBSTABLE_TYPE=20, COLLECTABLE_TYPE=21, START=22, HEALTH=23, SIZE=24, DAMAGE=25, 
		DIRECTION=26, ENTITY=27, AMOUNT=28, VAR=29, SET=30, EQ=31, FUNCTION_DEC=32, 
		FOREVER=33, MOVE=34, FACE=35, WAIT=36, SEC=37, ON=38, POS=39, CALL=40, 
		WIN_START=41, LOSE_START=42, UP=43, DOWN=44, LEFT=45, RIGHT=46, DEFINE=47, 
		OPEN_BRACE=48, CLOSE_BRACE=49, OPEN_CURLY_BRACE=50, CLOSE_CURLY_BRACE=51, 
		COLON=52, SEMI_COLON=53, COMMA=54, NUM=55, WS=56, TEXT=57, TWS=58;
	public static final int
		RULE_program = 0, RULE_arena_definition = 1, RULE_entity_definition = 2, 
		RULE_entity_declaration = 3, RULE_entity_type = 4, RULE_entity_attribute = 5, 
		RULE_start_attribute = 6, RULE_coordinate_value = 7, RULE_coordinate = 8, 
		RULE_health_attribute = 9, RULE_size_attribute = 10, RULE_direction_attribute = 11, 
		RULE_direction_type = 12, RULE_damage_attribute = 13, RULE_behavior_definition = 14, 
		RULE_instruction = 15, RULE_variable_definition = 16, RULE_variable_mutation = 17, 
		RULE_variable_value = 18, RULE_function_definition = 19, RULE_function_code = 20, 
		RULE_forever_loop_instruction = 21, RULE_entity_instruction = 22, RULE_instruction_code = 23, 
		RULE_move_instruction = 24, RULE_move_type = 25, RULE_face_instruction = 26, 
		RULE_wait_instruction = 27, RULE_value_statement = 28, RULE_function_instruction = 29, 
		RULE_unless_instruction = 30, RULE_boolean_statement = 31, RULE_boolean_conjuction = 32, 
		RULE_conjuction_op = 33, RULE_boolean_negation = 34, RULE_boolean_clause = 35, 
		RULE_comparison_clause = 36, RULE_comparison_operator = 37, RULE_on_clause = 38, 
		RULE_end_definition = 39, RULE_win_instruction = 40, RULE_lose_instruction = 41, 
		RULE_end_statement = 42, RULE_end_attribute = 43, RULE_math_expression = 44, 
		RULE_math_expression_operation = 45, RULE_math_term = 46, RULE_math_term_operation = 47, 
		RULE_math_factor = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "arena_definition", "entity_definition", "entity_declaration", 
			"entity_type", "entity_attribute", "start_attribute", "coordinate_value", 
			"coordinate", "health_attribute", "size_attribute", "direction_attribute", 
			"direction_type", "damage_attribute", "behavior_definition", "instruction", 
			"variable_definition", "variable_mutation", "variable_value", "function_definition", 
			"function_code", "forever_loop_instruction", "entity_instruction", "instruction_code", 
			"move_instruction", "move_type", "face_instruction", "wait_instruction", 
			"value_statement", "function_instruction", "unless_instruction", "boolean_statement", 
			"boolean_conjuction", "conjuction_op", "boolean_negation", "boolean_clause", 
			"comparison_clause", "comparison_operator", "on_clause", "end_definition", 
			"win_instruction", "lose_instruction", "end_statement", "end_attribute", 
			"math_expression", "math_expression_operation", "math_term", "math_term_operation", 
			"math_factor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ARENA:'", "'ENTITIES:'", "'BEHAVIOUR:'", "'END_CRITERIA:'", "'+'", 
			"'-'", "'*'", "'/'", "'unless'", "'or'", "'and'", "'not'", "'<'", "'>'", 
			"'<='", "'>='", null, null, null, null, null, "'start'", "'health'", 
			"'size'", "'damage'", "'direction'", null, "'amount'", null, null, "'='", 
			null, null, null, null, null, "'sec'", null, null, null, "'win:'", "'lose:'", 
			"'up'", "'down'", "'left'", "'right'", null, "'('", "')'", "'{'", "'}'", 
			"':'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ARENA_START", "ENTITIES_START", "BEHAVIOUR_START", "END_CRITERIA_START", 
			"ADD", "SUB", "MUL", "DIV", "UNLESS", "OR", "AND", "NOT", "LESS_THAN", 
			"GREATER_THAN", "LEQ", "GEQ", "EQUALS", "PLAYER_TYPE", "ENEMY_TYPE", 
			"OBSTABLE_TYPE", "COLLECTABLE_TYPE", "START", "HEALTH", "SIZE", "DAMAGE", 
			"DIRECTION", "ENTITY", "AMOUNT", "VAR", "SET", "EQ", "FUNCTION_DEC", 
			"FOREVER", "MOVE", "FACE", "WAIT", "SEC", "ON", "POS", "CALL", "WIN_START", 
			"LOSE_START", "UP", "DOWN", "LEFT", "RIGHT", "DEFINE", "OPEN_BRACE", 
			"CLOSE_BRACE", "OPEN_CURLY_BRACE", "CLOSE_CURLY_BRACE", "COLON", "SEMI_COLON", 
			"COMMA", "NUM", "WS", "TEXT", "TWS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EZGameParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EZGameParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Arena_definitionContext arena_definition() {
			return getRuleContext(Arena_definitionContext.class,0);
		}
		public Entity_definitionContext entity_definition() {
			return getRuleContext(Entity_definitionContext.class,0);
		}
		public Behavior_definitionContext behavior_definition() {
			return getRuleContext(Behavior_definitionContext.class,0);
		}
		public End_definitionContext end_definition() {
			return getRuleContext(End_definitionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(EZGameParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			arena_definition();
			setState(99);
			entity_definition();
			setState(100);
			behavior_definition();
			setState(101);
			end_definition();
			setState(102);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Arena_definitionContext extends ParserRuleContext {
		public TerminalNode ARENA_START() { return getToken(EZGameParser.ARENA_START, 0); }
		public Size_attributeContext size_attribute() {
			return getRuleContext(Size_attributeContext.class,0);
		}
		public Arena_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arena_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterArena_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitArena_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitArena_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arena_definitionContext arena_definition() throws RecognitionException {
		Arena_definitionContext _localctx = new Arena_definitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_arena_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(ARENA_START);
			setState(105);
			size_attribute();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Entity_definitionContext extends ParserRuleContext {
		public TerminalNode ENTITIES_START() { return getToken(EZGameParser.ENTITIES_START, 0); }
		public List<Entity_declarationContext> entity_declaration() {
			return getRuleContexts(Entity_declarationContext.class);
		}
		public Entity_declarationContext entity_declaration(int i) {
			return getRuleContext(Entity_declarationContext.class,i);
		}
		public Entity_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterEntity_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitEntity_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitEntity_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Entity_definitionContext entity_definition() throws RecognitionException {
		Entity_definitionContext _localctx = new Entity_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_entity_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(ENTITIES_START);
			setState(109); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(108);
				entity_declaration();
				}
				}
				setState(111); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEFINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Entity_declarationContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(EZGameParser.DEFINE, 0); }
		public Entity_typeContext entity_type() {
			return getRuleContext(Entity_typeContext.class,0);
		}
		public TerminalNode TEXT() { return getToken(EZGameParser.TEXT, 0); }
		public TerminalNode OPEN_CURLY_BRACE() { return getToken(EZGameParser.OPEN_CURLY_BRACE, 0); }
		public TerminalNode CLOSE_CURLY_BRACE() { return getToken(EZGameParser.CLOSE_CURLY_BRACE, 0); }
		public List<Entity_attributeContext> entity_attribute() {
			return getRuleContexts(Entity_attributeContext.class);
		}
		public Entity_attributeContext entity_attribute(int i) {
			return getRuleContext(Entity_attributeContext.class,i);
		}
		public Entity_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterEntity_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitEntity_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitEntity_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Entity_declarationContext entity_declaration() throws RecognitionException {
		Entity_declarationContext _localctx = new Entity_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_entity_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(DEFINE);
			setState(114);
			entity_type();
			setState(115);
			match(TEXT);
			setState(116);
			match(OPEN_CURLY_BRACE);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 130023424L) != 0)) {
				{
				{
				setState(117);
				entity_attribute();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(CLOSE_CURLY_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Entity_typeContext extends ParserRuleContext {
		public TerminalNode PLAYER_TYPE() { return getToken(EZGameParser.PLAYER_TYPE, 0); }
		public TerminalNode ENEMY_TYPE() { return getToken(EZGameParser.ENEMY_TYPE, 0); }
		public TerminalNode OBSTABLE_TYPE() { return getToken(EZGameParser.OBSTABLE_TYPE, 0); }
		public TerminalNode COLLECTABLE_TYPE() { return getToken(EZGameParser.COLLECTABLE_TYPE, 0); }
		public Entity_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterEntity_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitEntity_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitEntity_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Entity_typeContext entity_type() throws RecognitionException {
		Entity_typeContext _localctx = new Entity_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_entity_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3932160L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Entity_attributeContext extends ParserRuleContext {
		public Start_attributeContext start_attribute() {
			return getRuleContext(Start_attributeContext.class,0);
		}
		public Size_attributeContext size_attribute() {
			return getRuleContext(Size_attributeContext.class,0);
		}
		public Health_attributeContext health_attribute() {
			return getRuleContext(Health_attributeContext.class,0);
		}
		public Direction_attributeContext direction_attribute() {
			return getRuleContext(Direction_attributeContext.class,0);
		}
		public Damage_attributeContext damage_attribute() {
			return getRuleContext(Damage_attributeContext.class,0);
		}
		public Entity_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterEntity_attribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitEntity_attribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitEntity_attribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Entity_attributeContext entity_attribute() throws RecognitionException {
		Entity_attributeContext _localctx = new Entity_attributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_entity_attribute);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case START:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				start_attribute();
				}
				break;
			case SIZE:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				size_attribute();
				}
				break;
			case HEALTH:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				health_attribute();
				}
				break;
			case DIRECTION:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				direction_attribute();
				}
				break;
			case DAMAGE:
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				damage_attribute();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Start_attributeContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(EZGameParser.START, 0); }
		public TerminalNode EQ() { return getToken(EZGameParser.EQ, 0); }
		public Coordinate_valueContext coordinate_value() {
			return getRuleContext(Coordinate_valueContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(EZGameParser.SEMI_COLON, 0); }
		public Start_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterStart_attribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitStart_attribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitStart_attribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start_attributeContext start_attribute() throws RecognitionException {
		Start_attributeContext _localctx = new Start_attributeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_start_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(START);
			setState(135);
			match(EQ);
			setState(136);
			coordinate_value();
			setState(137);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Coordinate_valueContext extends ParserRuleContext {
		public CoordinateContext coordinate() {
			return getRuleContext(CoordinateContext.class,0);
		}
		public Coordinate_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coordinate_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterCoordinate_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitCoordinate_value(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitCoordinate_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Coordinate_valueContext coordinate_value() throws RecognitionException {
		Coordinate_valueContext _localctx = new Coordinate_valueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_coordinate_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			coordinate();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CoordinateContext extends ParserRuleContext {
		public List<TerminalNode> NUM() { return getTokens(EZGameParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(EZGameParser.NUM, i);
		}
		public TerminalNode COMMA() { return getToken(EZGameParser.COMMA, 0); }
		public CoordinateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coordinate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterCoordinate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitCoordinate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitCoordinate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CoordinateContext coordinate() throws RecognitionException {
		CoordinateContext _localctx = new CoordinateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_coordinate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(NUM);
			setState(142);
			match(COMMA);
			setState(143);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Health_attributeContext extends ParserRuleContext {
		public TerminalNode HEALTH() { return getToken(EZGameParser.HEALTH, 0); }
		public TerminalNode EQ() { return getToken(EZGameParser.EQ, 0); }
		public TerminalNode NUM() { return getToken(EZGameParser.NUM, 0); }
		public TerminalNode SEMI_COLON() { return getToken(EZGameParser.SEMI_COLON, 0); }
		public Health_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_health_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterHealth_attribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitHealth_attribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitHealth_attribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Health_attributeContext health_attribute() throws RecognitionException {
		Health_attributeContext _localctx = new Health_attributeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_health_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(HEALTH);
			setState(146);
			match(EQ);
			setState(147);
			match(NUM);
			setState(148);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Size_attributeContext extends ParserRuleContext {
		public TerminalNode SIZE() { return getToken(EZGameParser.SIZE, 0); }
		public TerminalNode EQ() { return getToken(EZGameParser.EQ, 0); }
		public TerminalNode NUM() { return getToken(EZGameParser.NUM, 0); }
		public TerminalNode SEMI_COLON() { return getToken(EZGameParser.SEMI_COLON, 0); }
		public Size_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_size_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).enterSize_attribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EZGameParserListener ) ((EZGameParserListener)listener).exitSize_attribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EZGameParserVisitor ) return ((EZGameParserVisitor<? extends T>)visitor).visitSize_attribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Size_attributeContext size_attribute() throws RecognitionException {
		Size_attributeContext _localctx = new Size_attributeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_size_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(SIZE);
			setState(151);
			match(EQ);
			setState(152);
			match(NUM);
			setState(153);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
